full updated code